basic sidebar working

--- a/src/optix/optix.component.html
+++ b/src/optix/optix.component.html
@@ -1,6 +1,6 @@
-<div class="logo-area">
-  <img src="../assets/Optix.svg" alt="Optix" class="logo" />
-  <h1 class="coming-soon">Web Server Coming Soon</h1>
+<div class="master-container">
+  <optix-sidebar class="sidebar"></optix-sidebar>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-
-<router-outlet></router-outlet>
