--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -1,10 +1,10 @@
-.coming-soon
-    text-align: center
-    color: white
-    font-family: calibri
-.logo
-    width: 50vw
-.logo-area
-    position: absolute
-    top: 20%
-    left: 25%
+.master-container
+    display: flex
+    min-height: 100vh
+    min-width: 100vw
+
+    .content
+        width: 100%
+
+    .sidebar
+        width: 20%
