--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -1,3 +1,13 @@
-<div>
-    <p>sidebar works!</p>
+<div class="main-panel">
+	<a [routerLink]="['/']">
+		<div class="logo-container">
+			<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
+		</div>
+	</a>
+	<span class="divider"></span>
+	<a [routerLink]="['/worldrecords']">
+		<div class="link">
+			<h2>World Records</h2>
+		</div>
+	</a>
 </div>
