--- a/src/optix/world-records/world-records.component.html
+++ b/src/optix/world-records/world-records.component.html
@@ -1,6 +1,6 @@
 <div class="logo-area">
 	<div>
 		<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
-		<h1 class="coming-soon">Web Server Coming Soon</h1>
+		<h1 class="coming-soon">World Records Coming Soon</h1>
 	</div>
 </div>
