got the basics of the page working

--- a/src/optix/home/home.component.sass
+++ b/src/optix/home/home.component.sass
@@ -1,11 +1,9 @@
-.coming-soon
-    text-align: center
-    color: white
-    font-family: calibri
+.content
+	padding: 15px 60px
 .logo
-    width: 50vw
+	width: 40%
 .logo-area
-    align-items: center
-    display: flex
-    height: 80vh
-    justify-content: center
+	align-items: center
+	display: flex
+	height: 45vh
+	justify-content: center
