--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -1,10 +1,15 @@
 .master-container
-    display: flex
-    min-height: 100vh
-    min-width: 100vw
+	background-color: #181818
+	color: white
+	display: flex
+	font-family: Arial, sans-serif
+	font-size: 20px
+	min-height: 100vh
+	min-width: 100vw
 
-    .content
-        width: 100%
+	.content
+		padding: 20px
+		width: 100%
 
-    .sidebar
-        width: 20%
+	.sidebar
+		width: 400px
