--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -10,4 +10,9 @@
 			<h2>World Records</h2>
 		</div>
 	</a>
+	<a [routerLink]="['/scoreboard']">
+		<div class="link">
+			<h2>Scoreboard</h2>
+		</div>
+	</a>
 </div>
