--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -31,7 +31,7 @@
 				font-size: 26px
 				font-weight: normal
 				margin: 0
-				padding-left: 30px
+				padding: 0 30px
 
 	.divider
 		background: -webkit-linear-gradient(left, white, #202020)
