--- a/src/optix/world-records/world-records.component.sass
+++ b/src/optix/world-records/world-records.component.sass
@@ -1,11 +1,8 @@
-.coming-soon
-    text-align: center
-    color: white
-    font-family: calibri
-.logo
-    width: 50vw
-.logo-area
-    align-items: center
-    display: flex
-    height: 80vh
-    justify-content: center
+.title-bar
+	margin-top: 70px
+
+	h1
+		font-weight: normal
+
+.world-records
+	margin-top: 30px
