--- a/src/optix/home/home.component.html
+++ b/src/optix/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="logo-area">
-	<div>
-		<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
-		<h1 class="coming-soon">Web Server Coming Soon</h1>
-	</div>
+	<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
+</div>
+<div class="content">
+	<p>Welcome to Optix</p>
 </div>
