--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,1 @@
-body
-    background-color: #181818
-    font-family: Arial, sans-serif
-    margin: 0
+@import '~bootstrap/dist/css/bootstrap.min.css'
