--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -15,4 +15,9 @@
 			<h2>Scoreboard</h2>
 		</div>
 	</a>
+	<a [routerLink]="['/authors']">
+		<div class="link">
+			<h2>Maps</h2>
+		</div>
+	</a>
 </div>
