--- a/src/optix/authors/authors.component.sass
+++ b/src/optix/authors/authors.component.sass
@@ -31,11 +31,28 @@
 		transition: 0.15s
 
 		.map
+			color: #0094ff
 			display: inline-block
 			text-decoration: none
 			font-size: 24px
 			font-weight: bold
 			padding-left: 30px
 			width: 100%
-			&:hover
-				text-decoration: underline
+			.copy-container
+				display: inline-block
+				width: 500px
+
+				.copy
+					display: inline
+					&:hover
+						cursor: pointer
+						text-decoration: underline
+
+			.download
+				display: inline
+				&:hover
+					cursor: pointer
+					text-decoration: underline
+
+			.map-button
+					margin: 0 10px
