gif no longer self hosted

--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 			<h2>Scoreboard</h2>
 		</div>
 	</a>
-	<a [routerLink]="['/authors']">
+	<a [routerLink]="['/maps']">
 		<div class="link">
 			<h2>Maps</h2>
 		</div>
