--- a/src/optix/not-found/not-found.component.html
+++ b/src/optix/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="not-found-wrapper">
 	<div class="not-found-inner-wrapper">
-		<img src="./404.gif" class="not-found"> 
+		<img src="../../assets/gifs/404.gif" class="not-found"> 
 		<h1 class="not-found-text">404 Not Found</h1>
 	</div>
 </div>
