--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -1,7 +1,9 @@
 .main-panel
 	background-color: #202020
 	box-shadow: 2px 0 12px #000000
-	height: 100%
+	height: 100vh
+	position: sticky
+	top: 0
 
 	a
 		text-decoration: none
