--- a/src/optix/home/home.component.html
+++ b/src/optix/home/home.component.html
@@ -2,5 +2,5 @@
 	<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
 </div>
 <div class="content">
-	<p>Welcome to Optix</p>
+	<p>Welcome to Optix, the community for racing in Feng's Attack on Titan Tribute Game (AoTTG). Make use of the 3D Maneuver Gear from the Attack on Titan anime and race through various community created courses!</p>
 </div>
