--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -20,7 +20,16 @@
 			<h2>Maps</h2>
 		</div>
 	</a>
-	<div class="filler">
-		
+	<div class="footer">
+		<span class="divider"></span>
+		<div class="icons">
+			<div class="filler">
+			</div>
+			<div class="discord">
+				<a href="https://discord.gg/Hked6UP9Gn">
+					<img src="../../assets/discord-mark-blue.svg" alt="Optix"/>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
