--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -41,6 +41,19 @@
 		height: 2px
 		margin: 25px 0 15px 0
 
+	.footer
+		bottom: 0
+		position: absolute
+		width: 100%
+
+		.icons
+			display: flex
+			justify-content: space-around
+			margin: 30px 0
+
+			.discord
+				width: 20%
+
 	.logo-container
 		align-items: flex-start
 		display: flex
