fixed searching for maps by alternative names

--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -15,6 +15,11 @@
 			<h2>Scoreboard</h2>
 		</div>
 	</a>
+	<a [routerLink]="['/botrecords']">
+		<div class="link">
+			<h2>Optix Bot Records</h2>
+		</div>
+	</a>
 	<a [routerLink]="['/maps']">
 		<div class="link">
 			<h2>Maps</h2>
