--- a/src/optix/maps/maps.component.sass
+++ b/src/optix/maps/maps.component.sass
@@ -79,6 +79,20 @@
 				.map-button
 						margin: 0 10px
 
+				.no-copy
+					display: flex
+
+					.map-subtitle
+						color: #555555
+						display: inline
+
+				.no-download
+					color: #555555
+					text-decoration: none
+			
+			.no-links
+				color: #555555
+
 			.notes
 				color: #bbbbbb
 				font-size: 16px
