--- a/src/optix/world-records/world-records.component.sass
+++ b/src/optix/world-records/world-records.component.sass
@@ -7,3 +7,41 @@
 
 .world-records
 	margin-top: 30px
+
+	.author-column
+		background-color: #3b3b3b
+
+	.center
+		text-align: center
+
+	.even-row
+		background-color: #141719
+
+	.first-header
+		background-color: #ffd800
+	
+	.first-row
+		background-color: #ccaa0040
+
+	.header
+		background-color: #303030
+
+	.record-rows
+		font-size: 18px
+
+	.second-header
+		background-color: #c0c0c0
+
+	.second-row
+		background-color: #c0c0c040
+
+	.shadow
+		text-shadow: 0 0 10px #000
+
+	.third-header
+		background-color: #cd7f32
+
+	.third-row
+		background-color: #cd7f3240
+
+
