--- a/src/optix/world-records/world-records.component.sass
+++ b/src/optix/world-records/world-records.component.sass
@@ -8,20 +8,11 @@
 .world-records
 	margin-top: 30px
 
-	.author-column
-		background-color: #3b3b3b
-
 	.center
 		text-align: center
 
-	.even-row
-		background-color: #141719
-
 	.first-header
 		background-color: #ffd800
-	
-	.first-row
-		background-color: #ccaa0040
 
 	.header
 		background-color: #303030
@@ -29,19 +20,39 @@
 	.record-rows
 		font-size: 18px
 
-	.second-header
-		background-color: #c0c0c0
+		.author-column
+			background-color: #3b3b3b
+			vertical-align: middle
 
-	.second-row
-		background-color: #c0c0c040
+			.scroll-author
+				bottom: 0
+				padding: 20px 0
+				position: sticky
+				top: 0
+
+		.even-row
+			background-color: #141719
+
+		.first-row
+			background-color: #ccaa0040
+
+		.hide
+			display: none
+
+		.no-link
+			color: #ffffff
+
+		.second-row
+			background-color: #c0c0c040
+
+		.third-row
+			background-color: #cd7f3240
 
 	.shadow
 		text-shadow: 0 0 10px #000
 
+	.second-header
+		background-color: #c0c0c0
+
 	.third-header
 		background-color: #cd7f32
-
-	.third-row
-		background-color: #cd7f3240
-
-
