--- a/src/optix/scoreboard/scoreboard.component.html
+++ b/src/optix/scoreboard/scoreboard.component.html
@@ -1,6 +1,73 @@
-<div class="logo-area">
-	<div>
-		<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
-		<h1 class="coming-soon">Scoreboard Coming Soon</h1>
+<div class="container">
+	<div class="row title-bar">
+		<h1 class="col-sm">Scoreboard</h1>
+	</div>
+	<div class="row">
+		<div class="col-4">
+			<table class="scoreboard table table-dark">
+				<thead>
+					<tr class="center">
+						<th scope="col" class="header">Player</th>
+						<th scope="col" class="gold-header shadow">Golds</th>
+					</tr>
+				</thead>
+				<tbody>
+					<ng-container *ngFor="let player of gold_records; index as i">
+						<tr class="record-rows">
+							<th scope="row" class="center player-column">
+								{{player.player}}
+							</th>
+							<td class="center shadow" [ngClass]="{'first-gold-row': i === 0, 'second-gold-row': i === 1, 'third-gold-row': i === 2}">
+								{{player.recordCount[0]}}
+							</td>
+						</tr>
+					</ng-container>
+				</tbody>
+			</table>
+		</div>
+		<div class="col-4">
+			<table class="scoreboard table table-dark">
+				<thead>
+					<tr class="center">
+						<th scope="col" class="header">Player</th>
+						<th scope="col" class="silver-header shadow">Silvers</th>
+					</tr>
+				</thead>
+				<tbody>
+					<ng-container *ngFor="let player of silver_records; index as i">
+						<tr class="record-rows">
+							<th scope="row" class="center player-column">
+								{{player.player}}
+							</th>
+							<td class="center shadow" [ngClass]="{'first-silver-row': i === 0, 'second-silver-row': i === 1, 'third-silver-row': i === 2}">
+								{{player.recordCount[1]}}
+							</td>
+						</tr>
+					</ng-container>
+				</tbody>
+			</table>
+		</div>
+		<div class="col-4">
+			<table class="scoreboard table table-dark">
+				<thead>
+					<tr class="center">
+						<th scope="col" class="header">Player</th>
+						<th scope="col" class="bronze-header shadow">Bronzes</th>
+					</tr>
+				</thead>
+				<tbody>
+					<ng-container *ngFor="let player of bronze_records; index as i">
+						<tr class="record-rows">
+							<th scope="row" class="center player-column">
+								{{player.player}}
+							</th>
+							<td class="center shadow" [ngClass]="{'first-bronze-row': i === 0, 'second-bronze-row': i === 1, 'third-bronze-row': i === 2}">
+								{{player.recordCount[2]}}
+							</td>
+						</tr>
+					</ng-container>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
