--- a/src/optix/scoreboard/scoreboard.component.sass
+++ b/src/optix/scoreboard/scoreboard.component.sass
@@ -1,11 +1,54 @@
-.coming-soon
-    text-align: center
-    color: white
-    font-family: calibri
-.logo
-    width: 50vw
-.logo-area
-    align-items: center
-    display: flex
-    height: 80vh
-    justify-content: center
+.scoreboard
+	margin-top: 30px
+
+	.bronze-header
+		background-color: #cd7f32
+
+	.center
+		text-align: center
+
+	.gold-header
+		background-color: #ffd800
+
+	.header
+		background-color: #303030
+
+	.record-rows
+		font-size: 18px
+
+		.first-bronze-row
+			background-color: #a56529
+
+		.first-gold-row
+			background-color: #d8b400
+
+		.first-silver-row
+			background-color: #999999
+
+		.player-column
+			background-color: #3b3b3b
+			font-weight: normal
+
+		.second-bronze-row
+			background-color: #7f4e1f
+
+		.second-gold-row
+			background-color: #b29400
+
+		.second-silver-row
+			background-color: #727272
+
+		.third-bronze-row
+			background-color: #593616
+
+		.third-gold-row
+			background-color: #8c7200
+
+		.third-silver-row
+			background-color: #4c4c4c
+
+	.shadow
+		text-shadow: 0 0 10px #000
+
+	.silver-header
+		background-color: #c0c0c0
