--- a/src/optix/maps/maps.component.sass
+++ b/src/optix/maps/maps.component.sass
@@ -4,6 +4,16 @@
 	h1
 		font-size: 50px
 		font-weight: normal
+	
+	.download-all
+		margin-bottom: 5px
+		margin-left: 30px
+
+		.download-all-text
+			font-size: 18px
+
+	.title
+		display: inline
 
 .author-panel
 	margin-top: 15px
