--- a/src/optix/scoreboard/scoreboard.component.html
+++ b/src/optix/scoreboard/scoreboard.component.html
@@ -3,7 +3,7 @@
 		<h1 class="col-sm">Scoreboard</h1>
 	</div>
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-lg-4">
 			<table class="scoreboard table table-dark">
 				<thead>
 					<tr class="center">
@@ -25,7 +25,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="col-md-4">
+		<div class="col-lg-4">
 			<table class="scoreboard table table-dark">
 				<thead>
 					<tr class="center">
@@ -47,7 +47,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="col-md-4">
+		<div class="col-lg-4">
 			<table class="scoreboard table table-dark">
 				<thead>
 					<tr class="center">
