--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -2,8 +2,9 @@
 	background-color: #202020
 	box-shadow: 2px 0 12px #000000
 	height: 100vh
-	position: sticky
+	position: fixed
 	top: 0
+	width: 330px
 
 	a
 		text-decoration: none
