--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -2,7 +2,7 @@
 	background-color: #202020
 	box-shadow: 2px 0 12px #000000
 	height: 100vh
-	position: fixed
+	position: sticky
 	top: 0
 	width: 330px
 
