touched up the home page

--- a/src/optix/home/home.component.html
+++ b/src/optix/home/home.component.html
@@ -3,4 +3,17 @@
 </div>
 <div class="content">
 	<p>Welcome to Optix, the community for racing in Feng's Attack on Titan Tribute Game (AoTTG). Make use of the 3D Maneuver Gear from the Attack on Titan anime and race through various community created courses!</p>
+	<div class="row newest-records">
+		<div class="col-lg-6">
+			<h2>Newest <span class="speed">Speed</span> Record</h2>
+			<iframe src="https://www.youtube.com/embed/X-IhqS-D4Ak" class="video" title="Zil - Ireeeeee 31.56" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
+		<div class="col-lg-6">
+			<h2>Newest <span class="lava">Lava</span> Record</h2>
+			<iframe src="https://www.youtube.com/embed/qslrkE7kYlE" class="video" title="Incendium - Inferno II World Record (252s)" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
+	</div>
 </div>
+<div class="disclaimer">By using this website, you acknowledge the CCP's crimes against humanity</div>
