--- a/src/optix/home/home.component.sass
+++ b/src/optix/home/home.component.sass
@@ -1,8 +1,32 @@
+.disclaimer
+	float: right
+	font-size: 12px
+
 .content
 	font-size: 22px
 	padding: 15px 60px
+
+	.newest-records
+		padding: 60px 0
+		text-align: center
+
+		h2
+			font-size: 42px
+			padding-bottom: 30px
+
+		.lava
+			color:#ff0000
+
+		.speed
+			color:#0080ff
+
+		.video
+			aspect-ratio: 16 / 9
+			width: 100%
+
 .logo
 	width: 40%
+
 .logo-area
 	align-items: center
 	display: flex
