fixed for mobile

--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -7,8 +7,13 @@
 	min-height: 100vh
 
 	.content
+		min-width: 600px
 		padding: 20px
 		width: 100%
+
+	.disclaimer
+		float: right
+		font-size: 12px
 
 	.sidebar
 		width: 330px
