--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -6,14 +6,16 @@
 	font-size: 20px
 	min-height: 100vh
 
-	.content
+	.content-wrapper
 		min-width: 600px
-		padding: 20px
 		width: 100%
 
-	.disclaimer
-		float: right
-		font-size: 12px
+		.content
+			padding: 20px
+
+		.disclaimer
+			float: right
+			font-size: 12px
 
 	.sidebar
 		width: 330px
