--- a/src/optix/home/home.component.html
+++ b/src/optix/home/home.component.html
@@ -4,15 +4,31 @@
 <div class="content">
 	<p>Welcome to Optix, the community for racing in Feng's Attack on Titan Tribute Game (AoTTG). Make use of the 3D Maneuver Gear from the Attack on Titan anime and race through various community created courses!</p>
 	<div class="row newest-records">
-		<div class="col-lg-6">
+		<div class="col-xl-6 video-wrapper">
 			<h2>Newest <span class="speed">Speed</span> Record</h2>
 			<iframe src="https://www.youtube.com/embed/X-IhqS-D4Ak" class="video" title="Zil - Ireeeeee 31.56" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-xl-6 video-wrapper">
 			<h2>Newest <span class="lava">Lava</span> Record</h2>
 			<iframe src="https://www.youtube.com/embed/qslrkE7kYlE" class="video" title="Incendium - Inferno II World Record (252s)" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</div>
+	</div>
+	<div class="new-maps">
+		<h2 class="map-header">Newest <span class="map-text">Map</span>: <span class="map-text">Deathdream</span></h2>
+		<h3>by Riblei</h3>
+		<div class="download-links">
+			<div class="link" (click)="copyMapScript(fileName)">
+				<fa-icon class="map-button" [icon]="faCopy"></fa-icon>
+				Copy to Clipboard
+			</div>
+			<a class="link" target="_blank" href="getDownloadLink(fileName)" [download]="getDownloadFileName(fileName)">
+				<fa-icon class="map-button" [icon]="faDownload"></fa-icon>
+				Download
+			</a>
+		</div>
+		<img src="https://cdn.discordapp.com/attachments/1137347379239071794/1178914180435288074/image.png?ex=6577e063&is=65656b63&hm=49ddf8a1bce7a755df71a11890c781f8b74c6b79101ef2cdd9b1f46997da2cb1&"
+			class="image">
 	</div>
 </div>
