--- a/src/optix/home/home.component.sass
+++ b/src/optix/home/home.component.sass
@@ -1,24 +1,60 @@
 .content
 	font-size: 22px
-	padding: 15px 60px
+	padding: 15px 60px 75px 60px
 
-	.newest-records
-		padding: 60px 0
+	h2
+		font-size: 42px
+		padding-bottom: 30px
+
+	.new-maps
+		margin-top: 60px
 		text-align: center
 
-		h2
-			font-size: 42px
-			padding-bottom: 30px
+		h3
+			font-size: 32px
+			margin-bottom: 15px
 
-		.lava
-			color:#ff0000
+		.download-links
+			display: flex
+			font-size: 24
+			justify-content: center
 
-		.speed
-			color:#0080ff
+			.link
+				color: #0094ff
+				text-decoration: none
+				width: 250px
+				&:hover
+					cursor: pointer
+					text-decoration: underline
 
-		.video
-			aspect-ratio: 16 / 9
+				.map-button
+					margin: 0 10px
+		.image
+			max-width: 1150px
+			padding-top: 25px
 			width: 100%
+
+		.map-header
+			padding-bottom: 0
+
+		.map-text
+			color: #ffd700
+
+	.newest-records
+		text-align: center
+
+		.video-wrapper
+			margin-top: 60px
+
+			.lava
+				color:#ff0000
+
+			.speed
+				color:#0080ff
+
+			.video
+				aspect-ratio: 16 / 9
+				width: 100%
 
 .logo
 	width: 40%
