now uses local image file

--- a/src/optix/home/home.component.html
+++ b/src/optix/home/home.component.html
@@ -28,7 +28,6 @@
 				Download
 			</a>
 		</div>
-		<img src="https://cdn.discordapp.com/attachments/1137347379239071794/1178914180435288074/image.png?ex=6577e063&is=65656b63&hm=49ddf8a1bce7a755df71a11890c781f8b74c6b79101ef2cdd9b1f46997da2cb1&"
-			class="image">
+		<img [src]="getImageLink(fileName)" class="image">
 	</div>
 </div>
