--- a/src/optix/bot-records/bot-records.component.html
+++ b/src/optix/bot-records/bot-records.component.html
@@ -1,6 +1,1 @@
-<div class="logo-area">
-	<div>
-		<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
-		<h1 class="coming-soon">Optix Bot Server Records Coming Soon</h1>
-	</div>
-</div>
+<app-record-table-page [fullRecordsList]="allRecords" tableName="Optix Bot Records"></app-record-table-page>
